Upload thesis figures

--- a/figure notebooks/figure_template.ipynb
+++ b/figure notebooks/figure_template.ipynb
@@ -26,7 +26,12 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "pre_segmentation_image = np.array((thresholdedProcessImage > 0) + 2 * (somaImage > 0), dtype=float)\n",
+    "\n",
+    "plotting.colorplot(plotting.panel(pre_segmentation_image, bbox, 1), two_map, interpolation=\"None\",\n",
+    "                   name=\"temp\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
