--- a/figure notebooks/preprocessingfigure.ipynb
+++ b/figure notebooks/preprocessingfigure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading process, soma images\n",
       "loading complete, calculating accuracy\n",
       "getting human labeled boundaries\n",
       "complete\n"
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "### barcode distributions\n",
@@ -95,6 +94,35 @@
     "left, right = dendrite_validate.align(dendrite_rate)\n",
     "left['is_somatic'] = right['is_somatic']\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calibration average dendritic localization0.08024219111630182\n",
+      "validation average dendritic localization0.09845831188617496\n",
+      "calibration average dendritic localization rate 0.06105590087458551\n",
+      "validation average dendritic localization rate 0.07903104031556338\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'calibration average dendritic localization{np.average(labeled_rna[\"dendritic\"])}')\n",
+    "print(f'validation average dendritic localization{np.average(validate_rna[\"dendritic\"])}')\n",
+    "\n",
+    "print(f'calibration average dendritic localization rate {np.average(dendrite_rate[\"dendritic\"])}')\n",
+    "print(f'validation average dendritic localization rate {np.average(dendrite_validate[\"dendritic\"])}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -187,6 +215,30 @@
     "permutation_two = np.random.choice(range(n), n, replace=False) / n\n",
     "\n",
     "simdiffs = permutation_one - permutation_two\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13516005347190949\n",
+      "0.33223898704542126\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(np.abs(realdiffs)))\n",
+    "print(np.mean(np.abs(simdiffs)))"
    ],
    "metadata": {
     "collapsed": false,
